Enabled migrations and included local db access

--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Web.config
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Web.config
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DarkSoulsSiteMVC-20170517114159.mdf;Initial Catalog=aspnet-DarkSoulsSiteMVC-20170517114159;Integrated Security=True"
+    <add name="DefaultConnection" 
+         connectionString="Data Source=.;
+         Initial Catalog=DarkSoulsSiteMVC-Dev;
+         Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
