--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/DarkSoulsSiteMVC.csproj
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/DarkSoulsSiteMVC.csproj
@@ -195,13 +195,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201705222012349_AddedYacto.cs" />
-    <Compile Include="Migrations\201705222012349_AddedYacto.Designer.cs">
-      <DependentUpon>201705222012349_AddedYacto.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -236,7 +230,9 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -283,9 +279,14 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201705222012349_AddedYacto.resx">
-      <DependentUpon>201705222012349_AddedYacto.cs</DependentUpon>
-    </EmbeddedResource>
+    <ProjectReference Include="..\DarkSoulsSite.DbContext\DarkSoulsSite.DbContext.csproj">
+      <Project>{D1CBAB65-BDC8-4E28-8C2B-3D1AA5248073}</Project>
+      <Name>DarkSoulsSite.DbContext</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DarkSoulsSite.Entities\DarkSoulsSite.Entities.csproj">
+      <Project>{2D911781-68E5-4C15-9764-B19AB41E2C98}</Project>
+      <Name>DarkSoulsSite.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
