--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Web.config
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Web.config
@@ -11,7 +11,7 @@
   
   <!--Production-->
   <connectionStrings>
-    <add name="DefaultConnection" 
+    <add name="DarkSoulsSiteConnection" 
       connectionString="Server=97ab8db5-f955-4371-913b-a77a015b2054.sqlserver.sequelizer.com;
       Initial Catalog=db97ab8db5f9554371913ba77a015b2054;
       Persist Security Info=True;
