Added Common Files

--- a/DarkSoulsSiteMVC/DarkSoulsSite.DbContext/DarkSoulsSite.DbContext.csproj
+++ b/DarkSoulsSiteMVC/DarkSoulsSite.DbContext/DarkSoulsSite.DbContext.csproj
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -54,6 +55,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
+    <Compile Include="Migrations\201705282349099_InitialMigrations.cs" />
+    <Compile Include="Migrations\201705282349099_InitialMigrations.Designer.cs">
+      <DependentUpon>201705282349099_InitialMigrations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Migrations\Initializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -67,6 +74,11 @@
       <Project>{2D911781-68E5-4C15-9764-B19AB41E2C98}</Project>
       <Name>DarkSoulsSite.Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201705282349099_InitialMigrations.resx">
+      <DependentUpon>201705282349099_InitialMigrations.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
