--- a/DarkSoulsSiteMVC/DarkSoulsSite.Entities/DarkSoulsSite.Entities.csproj
+++ b/DarkSoulsSiteMVC/DarkSoulsSite.Entities/DarkSoulsSite.Entities.csproj
@@ -74,6 +74,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\BaseEntity.cs" />
+    <Compile Include="Common\Character.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
