--- a/DarkSoulsSiteMVC/DarkSoulsSite.Common/DarkSoulsSite.Common.csproj
+++ b/DarkSoulsSiteMVC/DarkSoulsSite.Common/DarkSoulsSite.Common.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,7 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\FutureDate.cs" />
+    <Compile Include="Attributes\ValidTime.cs" />
+    <Compile Include="Extensions\CustomException.cs" />
+    <Compile Include="Extensions\CustomId.cs" />
+    <Compile Include="IPHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ErrorUtils.cs" />
+    <Compile Include="Utils\HashUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
