--- a/DarkSoulsSiteMVC/DarkSoulsSite.DbContext/DarkSoulsSite.DbContext.csproj
+++ b/DarkSoulsSiteMVC/DarkSoulsSite.DbContext/DarkSoulsSite.DbContext.csproj
@@ -75,9 +75,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
-    <Compile Include="Migrations\201706011609332_Final.cs" />
-    <Compile Include="Migrations\201706011609332_Final.Designer.cs">
-      <DependentUpon>201706011609332_Final.cs</DependentUpon>
+    <Compile Include="Migrations\201706012244331_BossFixedAndSeed.cs" />
+    <Compile Include="Migrations\201706012244331_BossFixedAndSeed.Designer.cs">
+      <DependentUpon>201706012244331_BossFixedAndSeed.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\Initializer.cs" />
@@ -98,8 +98,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201706011609332_Final.resx">
-      <DependentUpon>201706011609332_Final.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706012244331_BossFixedAndSeed.resx">
+      <DependentUpon>201706012244331_BossFixedAndSeed.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
