--- a/DarkSoulsSiteMVC/DarkSoulsSite.Common/DarkSoulsSite.Common.csproj
+++ b/DarkSoulsSiteMVC/DarkSoulsSite.Common/DarkSoulsSite.Common.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Attributes\FutureDate.cs" />
     <Compile Include="Attributes\ValidTime.cs" />
+    <Compile Include="Calculations\CharacterCalculation.cs" />
     <Compile Include="Extensions\CustomException.cs" />
     <Compile Include="Extensions\CustomId.cs" />
     <Compile Include="IPHelper.cs" />
@@ -50,5 +51,6 @@
     <Compile Include="Utils\ErrorUtils.cs" />
     <Compile Include="Utils\HashUtils.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
