--- a/DarkSoulsSiteMVC/DarkSoulsSite.DbContext/DarkSoulsSite.DbContext.csproj
+++ b/DarkSoulsSiteMVC/DarkSoulsSite.DbContext/DarkSoulsSite.DbContext.csproj
@@ -75,13 +75,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
-    <Compile Include="Migrations\201706081838384_FixedBaseStats.cs" />
-    <Compile Include="Migrations\201706081838384_FixedBaseStats.Designer.cs">
-      <DependentUpon>201706081838384_FixedBaseStats.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201706082113483_finalStats.cs" />
-    <Compile Include="Migrations\201706082113483_finalStats.Designer.cs">
-      <DependentUpon>201706082113483_finalStats.cs</DependentUpon>
+    <Compile Include="Calculations\FightPointsCalculation.cs" />
+    <Compile Include="Migrations\201706090512230_Final.cs" />
+    <Compile Include="Migrations\201706090512230_Final.Designer.cs">
+      <DependentUpon>201706090512230_Final.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\Initializer.cs" />
@@ -102,11 +99,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201706081838384_FixedBaseStats.resx">
-      <DependentUpon>201706081838384_FixedBaseStats.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706082113483_finalStats.resx">
-      <DependentUpon>201706082113483_finalStats.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706090512230_Final.resx">
+      <DependentUpon>201706090512230_Final.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
